styling, fix spacing and placement

--- a/style.css
+++ b/style.css
@@ -103,27 +103,24 @@
   float: right;
 }
 
-.individual-song {
+.song-title {
+  margin: 18.8px auto;
   padding: 1.4px;
-}
-
-.individual-song h1 {
   font-size: 1.8em;
   text-align: center;
 }
 
+
 .artist-song {
   display: inline;
-  margin: 0 auto;
+  margin-left: 100px;
   padding: 0 20px;
 }
 
 .album-song {
   display: inline;
-  margin: 0 auto;
-  padding: 0 20px;
+  margin-right: 50px;
+  padding: 0 60px;
 }
 
-#delete-song {
-  display: inline;
-}
+
